# debcg

./: .gitignore  LICENSE  README.md  pyproject.toml
debcg/: README.md  __init__.py  bcgnet.py  brnet.py  deep.py  dmh.py  obs.py  preprocessing.py  qrs.py  stats.py
tests/: test_basic.py
