[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debcg"
version = "0.1.0"
description = "Unified EEG-fMRI BCG artifact suppression toolbox"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "I-Chen Wang"},
    {name = "Teng-Yi Huang"},
    {name = "Hsin-Ju Lee"},
    {name = "Fa-Hsuan Lin"},
]
maintainers = [
    {name = "Teng-Yi Huang", email = "tyhuang@example.com"},
]
keywords = [
    "EEG",
    "fMRI",
    "BCG",
    "ballistocardiogram",
    "artifact",
    "deep learning",
    "signal processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
deep = [
    "torch>=1.10.0",
]
all = [
    "torch>=1.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/debcg"
Repository = "https://github.com/your-username/debcg"
Documentation = "https://github.com/your-username/debcg#readme"
Issues = "https://github.com/your-username/debcg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["debcg*"]

[tool.setuptools.package-data]
debcg = ["*.md"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
